# process-manager

./: .gitignore  CMakeLists.txt  Makefile  README.md  input_queue.c  main  main.c  process.c  process_pseudo.c  pseudo_process.h  queue.c  queue.h  ready_queue.c  scheduler.c  scheduling.c  sha256.c  sort.c  sort.h
cases/user-defined/: far-separation.txt  simultaneous-request.txt
include/: heap.h  input_queue.h  mem_alloc.h  process_real.h  pseudo_process.h  queue.h  ready_queue.h  scheduler.h
includes/: input_queue.h  pseudo_process.h  ready_queue.h  sort.h
other/: process.c
others/: sha256.h
src/: heap.c  input_queue.c  main.c  mem_alloc.c  process_pseudo.c  process_real.c  queue.c  ready_queue.c  scheduler.c  sort.c
